# mass-mv

./: Cargo.toml  README.md
src/: args.rs  iter.rs  main.rs  options.rs  paths.rs  rename.rs  template.rs
