[package]
name = "mmv"
version = "0.2.3"
authors = ["J/A <archer884@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.42"
either = "1.6.1"
glob = "0.3.0"
regex = "1.4.5"
structopt = "0.3.21"
walkdir = "2.3.2"
