[package]
name = "mmv"
version = "0.3.3"
authors = ["J/A <archer884@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
clap = { version = "4.3.0", features = ["derive", "wrap_help"] }
either = "1.8.1"
glob = "0.3.1"
regex = "1.8.3"
structopt = "0.3.26"
walkdir = "2.3.3"
